--- a/templates/index.html
+++ b/templates/index.html
@@ -26,54 +26,66 @@
 <div id="container">
   <div class="container-emotion">
     <video id="gum-local" autoplay playsinline></video>
+    <img id="image-emotion">
     <canvas id="canvas-emotion"></canvas>
 
+<div class="progress-bar-container">
     <div class="wrapper">
-			<div class="progress-bar">
-				<span id="progress-bar-angry" class="progress-bar-fill">Raiva - 0%</span>
+			<div id="progress-bar-angry" class="progress-bar">
+				<span class="progress-bar-percentage">Raiva - 0%</span>
+        <span class="progress-bar-fill"></span>
 			</div>
 		</div>
 
     <div class="wrapper">
-			<div class="progress-bar">
-				<span id="progress-bar-disgust" class="progress-bar-fill">Nojo - 0%</span>
+			<div id="progress-bar-disgust" class="progress-bar">
+				<span class="progress-bar-percentage">Nojo - 0%</span>
+        <span class="progress-bar-fill"></span>
 			</div>
 		</div>
 
     <div class="wrapper">
-			<div class="progress-bar">
-				<span id="progress-bar-fear" class="progress-bar-fill">Medo - 0%</span>
+			<div id="progress-bar-fear" class="progress-bar">
+				<span class="progress-bar-percentage">Medo - 0%</span>
+        <span class="progress-bar-fill"></span>
 			</div>
 		</div>
 
     <div class="wrapper">
-			<div class="progress-bar">
-				<span id="progress-bar-happy" class="progress-bar-fill">Feliz - 0%</span>
+			<div id="progress-bar-happy" class="progress-bar">
+				<span class="progress-bar-percentage">Feliz - 0%</span>
+        <span class="progress-bar-fill"></span>
 			</div>
 		</div>
 
     <div class="wrapper">
-			<div class="progress-bar">
-				<span id="progress-bar-sad" class="progress-bar-fill">Triste - 0%</span>
+			<div id="progress-bar-sad" class="progress-bar">
+				<span class="progress-bar-percentage">Triste - 0%</span>
+        <span class="progress-bar-fill"></span>
 			</div>
 		</div>
 
     <div class="wrapper">
-			<div class="progress-bar">
-				<span id="progress-bar-surprise" class="progress-bar-fill">Surpreso - 0%</span>
+			<div id="progress-bar-surprise" class="progress-bar">
+				<span class="progress-bar-percentage">Surpreso - 0%</span>
+        <span class="progress-bar-fill"></span>
 			</div>
 		</div>
 
     <div class="wrapper">
-			<div class="progress-bar">
-				<span id="progress-bar-neutral" class="progress-bar-fill">Neutro - 0%</span>
+			<div id="progress-bar-neutral" class="progress-bar">
+				<span class="progress-bar-percentage">Neutro - 0%</span>
+        <span class="progress-bar-fill"></span>
 			</div>
 		</div>
+  </div>
     
   </div>
 
     <h3 id="emotion"></h3>
     <button id="showVideo">Open camera</button>
+
+    <input type="file" id="fileInput">
 </div>
 
 <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
