--- a/static/recognition/style.css
+++ b/static/recognition/style.css
@@ -10,6 +10,54 @@ body {
     height: 100vh;
 }
 
+.container-emotion {
+    width: 50vw;
+    margin-left: 6rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.container-emotion-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 94vh;
+    margin: auto;
+    padding: 0 2rem;
+    position: relative;
+    border-radius: 6px;
+    background: rgba(255, 255, 255, 0.07);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(2.2px);
+    -webkit-backdrop-filter: blur(2.2px);
+    border: 1px solid rgba(255, 255, 255, 0.12);
+}
+
+#video-emotion {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+video {
+    max-height: 30rem;
+}
+
+#canvas-emotion {
+    position: absolute;
+    left: 0;
+}
+
+#emotion {
+    display: block;
+    width: 40rem;
+    text-align: center;
+    margin-top: 2rem;
+}
+
 .typing-container {
     display: flex;
     justify-content: center;
@@ -31,12 +79,9 @@ body {
 
 .futuristic-button {
     background-color: #00aaff;
-    /* Cor de fundo do botão */
     color: #ffffff;
-    /* Cor do texto do botão */
     border: none;
     border-radius: 5px;
-    /* Borda arredondada */
     padding: 10px 20px;
     font-size: 16px;
     text-align: center;
@@ -44,12 +89,10 @@ body {
     display: inline-block;
     cursor: pointer;
     transition: background-color 0.3s, color 0.3s;
-    /* Efeito de transição suave */
 }
 
 .futuristic-button:hover {
     background-color: #0077cc;
-    /* Cor de fundo do botão ao passar o mouse */
 }
 
 #recognition>h3 {
@@ -67,24 +110,25 @@ body {
     animation: fadeIn 1s;
 }
 
-#canvas-emotion {
-    position: absolute;
-    left: 0;
-    top: 0;
-}
-
 #container {
     position: relative;
     width: 100%;
+    height: 100vh;
+    display: flex;
+}
+
+#video-emotion {
+    position: relative;
 }
 
 .progress-bar-container {
     display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
     opacity: 0;
     transition: 150ms;
-    position: absolute;
-    right: 1rem;
-    top: 1rem;
     animation: fadeIn 1s;
 }
 
