--- a/templates/index.html
+++ b/templates/index.html
@@ -30,10 +30,10 @@
     </div>
 
     <div class="home--buttons">
-      <button class="futuristic-button" onclick="goToRecognitionPage()" >Reconhecimento em tempo real</button>
+      <button class="futuristic-button" onclick="goToRecognitionPage('realtime')" >Reconhecimento em tempo real</button>
 
-      <input id="fileInput" type="file" accept="image/*">
-      <label for="fileInput" class="futuristic-button">Reconhecimento de uma Imagem</label>
+      <button class="futuristic-button" onclick="goToRecognitionPage('image')" >Reconhecimento de uma Imagem</button>
+
     </div>
 
   </div>
