--- a/static/recognition-realtime/style.css
+++ b/static/recognition-realtime/style.css
@@ -5,6 +5,33 @@
     box-sizing: border-box;
 }
 
+#recognition>* {
+    animation: fadeIn 250ms ease-in-out;
+}
+
+.vanta-canvas {
+    animation: fadeIn 2s;
+}
+
+video {
+    animation: fadeIn 250ms ease-in-out;
+}
+
+#logo {
+    z-index: 2;
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 5rem;
+    filter: opacity(0.7);
+    cursor: pointer;
+    transition: 125ms ease-in-out;
+}
+
+#logo:hover {
+    filter: opacity(1);
+}
+
 body {
     background-color: #0b0b0b;
     height: 100vh;
