--- a/templates/recognition-image.html
+++ b/templates/recognition-image.html
@@ -17,21 +17,32 @@
 
     <link rel="icon" sizes="192x192" href="../../../images/webrtc-icon-192x192.png">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='recognition/style.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='recognition-image/style.css') }}">
 
 </head>
 
 <body id="body">
+
+  <img id="logo" onclick="window.location.href = '/'" src="{{ url_for('static', filename='images/logo.png') }}">
 
     <div id="recognition">
 
       <div id="container">
         <div class="container-emotion">
           <div class="container-emotion-card">
-            <div id="video-emotion">
-              <video id="gum-local" autoplay playsinline></video>
-              <canvas id="canvas-emotion"></canvas>
-            </div>
+            <section id="dropfile" class="droparea">
+              <div class="droparea-description">
+                <input id="fileInput" type="file" accept="image/*">
+                <label for="fileInput" class="file-input-label">Choose a file</label>
+                <p>&nbsp;or drag it here.</p>
+              </div>
+              <p><small>No max file size.</small></p>
+          </section>
+
+          <div id="image-emotion-container">
+            <img id="image">
+            <canvas id="canvas-emotion"></canvas>
+          </div>
 
             <h3 id="emotion" class="progress-bar"></h3>
           </div>
@@ -94,7 +105,7 @@
         </div>
 
       <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
-      <script src="{{ url_for('static', filename='recognition/script.js') }}"></script>
+      <script src="{{ url_for('static', filename='recognition-image/script.js') }}"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.net.min.js"></script>
     <script>
