--- a/templates/index.html
+++ b/templates/index.html
@@ -30,9 +30,9 @@
     </div>
 
     <div class="home--buttons">
-      <button class="futuristic-button" onclick="goToRecognitionPage('realtime')" >Reconhecimento em tempo real</button>
+      <button class="futuristic-button" onclick="window.location.href = '/recognition/realtime'" >Reconhecimento em tempo real</button>
 
-      <button class="futuristic-button" onclick="goToRecognitionPage('image')" >Reconhecimento de uma Imagem</button>
+      <button class="futuristic-button" onclick="window.location.href = '/recognition/image'" >Reconhecimento de uma Imagem</button>
 
     </div>
 
@@ -41,8 +41,8 @@
 <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
 <script src="{{ url_for('static', filename='home/script.js') }}"></script>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.net.min.js"></script>
+<script src="{{ url_for('static', filename='libs/vantajs/three.min.js') }}"></script>
+<script src="{{ url_for('static', filename='libs/vantajs/vanta.net.min.js') }}"></script>
 <script>
 VANTA.NET({
   el: "#body",
