--- a/templates/recognition-realtime.html
+++ b/templates/recognition-realtime.html
@@ -95,10 +95,9 @@
             <input type="file" id="fileInput">
         </div>
 
-      <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
       <script src="{{ url_for('static', filename='recognition-realtime/script.js') }}"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.net.min.js"></script>
+      <script src="{{ url_for('static', filename='libs/vantajs/three.min.js') }}"></script>
+      <script src="{{ url_for('static', filename='libs/vantajs/vanta.net.min.js') }}"></script>
     <script>
         VANTA.NET({
         el: "#body",
