--- a/templates/recognition-realtime.html
+++ b/templates/recognition-realtime.html
@@ -15,7 +15,7 @@
 
     <title>emotion recognition</title>
 
-    <link rel="icon" sizes="192x192" href="../../../images/webrtc-icon-192x192.png">
+    <link rel="icon" sizes="192x192" href="{{ url_for('static', filename='images/favicon.png') }}">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='recognition-realtime/style.css') }}">
 
