--- a/templates/recognition-image.html
+++ b/templates/recognition-image.html
@@ -15,7 +15,7 @@
 
     <title>emotion recognition</title>
 
-    <link rel="icon" sizes="192x192" href="../../../images/webrtc-icon-192x192.png">
+    <link rel="icon" sizes="192x192" href="{{ url_for('static', filename='images/favicon.png') }}">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='recognition-image/style.css') }}">
 
@@ -40,8 +40,9 @@
           </section>
 
           <div id="image-emotion-container">
+            <p id="click-to-remove" class="progress-bar">ℹ️ Clique na imagem para remover.</p>
             <img id="image">
-            <canvas id="canvas-emotion"></canvas>
+            <canvas id="canvas-emotion" onclick="resetImage()"></canvas>
           </div>
 
             <h3 id="emotion" class="progress-bar"></h3>
