--- a/templates/recognition-realtime.html
+++ b/templates/recognition-realtime.html
@@ -13,7 +13,7 @@
 
     <base target="_blank">
 
-    <title>emotion recognition</title>
+    <title>Emotion Recognition</title>
 
     <link rel="icon" sizes="192x192" href="{{ url_for('static', filename='images/favicon.png') }}">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet" type="text/css">
